# UNIGAP-ProjectAirflow

./: .gitignore  README.md  pyproject.toml
airflow/: docker-compose.yaml  requirements.txt
dags/: kafka_monitoring_dag.py  spark_monitoring_dag.py
plugins/operators/: kafka_operators.py  spark_operators.py
plugins/utils/: telegram_alerts.py
